--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,20 @@
 **************************
 **************************
+version 3.14
+
+December 2 2009
+
+The National Library of Finland
+Ere Maijala
+http://www.nationallibrary.fi/
+ere.maijala at helsinki.fi
+
+- Cleaned up error handling and improved the API for errors and warnings.
+- Added API command to add and remove configuration overrides.
+
+
+**************************
+**************************
 version 3.13
 
 September 4 2009
