--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,7 @@
 **************************
 version 3.15
 
-December 17 2010
+January 18 2011
 
 The National Library of Finland
 Ere Maijala
@@ -12,6 +12,7 @@ ere.maijala at helsinki.fi
 - Fixed encoding/decoding of tag, indicators and subfield code 
   when processing xml files (just in case..).
 - Fixed a memory leak during conversion.
+- Fixed hang when an xml record contained too long leader.
 
 
 **************************
