--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,20 @@
 **************************
 **************************
+version 3.16
+
+February 14 2011
+
+The National Library of Finland
+Ere Maijala
+http://www.nationallibrary.fi/
+ere.maijala at helsinki.fi
+
+- Fixed character conversion tables. In some cases the proper
+  conversion was not used due to signed/unsigned comparison.
+
+
+**************************
+**************************
 version 3.15
 
 January 18 2011
